Getting closer to short text on info field - still have a bug there.

--- a/css/main.css
+++ b/css/main.css
@@ -55,3 +55,15 @@ th {
   background-color: #eee ;
 }
 
+.comment {
+	margin: 2px;
+	background-color: #f0f0f0;
+}
+a.morelink {
+	text-decoration:none;
+	outline: none;
+}
+.morecontent span {
+	display: none;
+
+}
