--- a/css/main.css
+++ b/css/main.css
@@ -60,10 +60,16 @@ th {
 	background-color: #f0f0f0;
 }
 a.morelink {
-	text-decoration:none;
-	outline: none;
+    /* text-decoration: none ;
+	outline: none ; */
 }
 .morecontent span {
 	display: none;
 
+}
+a {
+	color: #0254EB
+}
+a:visited {
+	color: #0254EB
 }
